fixing landscape and portrait orientation on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,138 @@ footer .footer-content .column2 .logo-osis-footer {
 }
 
 
-@media (min-width: 360px) and (max-width: 450px) {
+@media (min-height: 400px) and (max-height:450px) and (orientation:landscape){
+
+  html {
+   font-size: 55%;
+  }
+  .hero {
+   min-height: 80vh;
+   margin: 10rem 0 1rem 19rem;
+  }
+  .hero .hero-content .img-hero img {
+   width: 250px;
+   height: 250px;
+  }
+  .hero .hero-content .welcoming-text .paragraf1 {
+   font-size: 3rem;
+  }
+  .hero .hero-content .welcoming-text .paragraf2 {
+   font-size: 3rem;
+  }
+  .hero .hero-content .welcoming-text .paragraf3 {
+   font-size: 2.7rem;
+  }
+  .vision-mission .container-vision {
+   padding: 0;
+  }
+  .vision-mission h1::after{
+   width: 240px;
+  }
+  .vision-mission .container-vision .vision {
+   max-width: 47vw;
+   height: 160px;
+   margin-right: 0.5rem;
+   > h2 + h3 {
+     font-size: 1.2rem;
+   }
+  }
+  .vision-mission .container-vision .mission {
+   max-width: 47vw;
+   height: 160px;
+   padding: 1rem;
+   h3 + ul > div {
+     padding: 0.8rem;
+   }
+  }
+  .vision-mission .container-vision .mission ul .column-1 li{
+   font-size: 1.2rem;
+  }
+  .vision-mission .container-vision .mission ul .column-2 li{
+   font-size: 1.2rem;
+  }
+  .vision-mission .container-vision .mission ul .column-2 {
+   padding: 0.8rem;
+  }
+  .member {
+   height: 400px;
+  }
+  .member a{
+   transform: translateX(86vw);
+   width: 98px;
+  }
+  .member .swiper-slide img {
+   width: 220px;
+   height: 240px;
+  }
+}
+@media (min-height:360px) and (max-height:399px) and (orientation: landscape){
+   html {
+    font-size: 55%;
+  }
+  
+  .hero {
+    min-height: 80vh;
+    margin: 10rem 0 1rem calc(18vw);
+  }
+  .hero .hero-content .img-hero img {
+    width: 220px;
+    height: 220px;
+  }
+  .hero .hero-content .welcoming-text .paragraf1 {
+    font-size: 2.7rem;
+  }
+  .hero .hero-content .welcoming-text .paragraf2 {
+    font-size: 2.7rem;
+  }
+  .hero .hero-content .welcoming-text .paragraf3 {
+    font-size: 2.5rem;
+  }
+  .vision-mission .container-vision {
+    padding: 0;
+  }
+  .vision-mission h1::after{
+    width: 240px;
+  }
+  .vision-mission .container-vision .vision {
+    max-width: 47vw;
+    height: 160px;
+    margin-right: 0.5rem;
+    > h2 + h3 {
+      font-size: 1.2rem;
+    }
+  }
+  .vision-mission .container-vision .mission {
+    max-width: 47vw;
+    height: 160px;
+    padding: 1rem;
+    h3 + ul > div {
+      padding: 0.8rem;
+    }
+  }
+  .vision-mission .container-vision .mission ul .column-1 li{
+    font-size: 1.2rem;
+  }
+  .vision-mission .container-vision .mission ul .column-2 li{
+    font-size: 1.2rem;
+  }
+  .vision-mission .container-vision .mission ul .column-2 {
+    padding: 0.8rem;
+  }
+  .member {
+    height: 380px;
+  }
+  .member a{
+    transform: translateX(82vw);
+    width: 98px;
+  }
+  .member .swiper-slide img {
+    width: 200px;
+    height: 220px;
+  }
+
+}
+@media (min-width:360px) and (max-width:369px) and (orientation: portrait){
   html {
     font-size: 55%;
   }
@@ -692,12 +823,49 @@ footer .footer-content .column2 .logo-osis-footer {
     height: 310px;
   }
   .member a{
-    transform: translateX(65vw);
+    transform: translateX(67vw);
     width: 98px;
   }
   .member .swiper-slide img {
-    width: 110px;
-    height: 115px;
+    width: 100px;
+    height: 110px;
     object-fit: contain;
   }
 }
+@media (min-width: 370px) and (max-width: 450px) and (orientation:portrait){
+  html {
+    font-size: 55%;
+  }
+  .menu-toggle-button {
+    display: inline-flex;
+  }
+  nav .navigation-menu {
+    position: absolute;
+    right: 0;
+    top: 5rem;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    min-height: 100vh;
+    background-color: rgb(142, 17, 17);
+    z-index: -1;
+    transform: translateX(100%);
+    transition: all 0.2s;
+    opacity: 0;
+    padding: 5px 1em;
+  }
+  nav .navigation-menu .dropdown-menu {
+    display: none;
+  }
+  nav .navigation-menu li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+  }
+
+  nav .navigation-menu li a {
+    font-size: 2.2rem;
+    text-align: center;
+    display: inline-flex;
+  }
